# Bobby

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  bobby.doap  cargo-sources.yml  meson.build  studio.planetpeanut.Bobby.devel.yml  studio.planetpeanut.Bobby.yml
.github/workflows/: flatpak.yml  tests.yml
build-aux/: create-release.sh  release-steps.md  release-steps.sh
data/: gschemas.compiled  meson.build  studio.planetpeanut.Bobby-mime.xml  studio.planetpeanut.Bobby.desktop  studio.planetpeanut.Bobby.gschema.xml  studio.planetpeanut.Bobby.metainfo.xml
data/icons/: meson.build
data/screenshots/: meson.build
info/: release-steps.md
src/: app.rs  cli.rs  gui.rs  log.rs  main.rs
src/bobby/: mod.rs  prelude.rs
src/bobby/sqlite/: affinity.rs  cache.rs  column.rs  database.rs  row.rs  table.rs
src/bobby/tests/: mod.rs
src/bobby/tests/sqlite/: test_sqlite_affinity.rs
src/gtk/: about.rs  content.rs  drop_target.rs  file.rs  files.rs  item.rs  lib.rs  menu.rs  mod.rs  preferences.rs  shortcuts.rs  switcher.rs  util.rs  window.rs
src/gtk/actions/: app_about.rs  app_close.rs  app_open.rs  app_preferences.rs  app_quit.rs  app_refresh.rs  app_reload.rs  app_shortcuts.rs  prelude.rs  win_close.rs  win_copy_row.rs  win_copy_val.rs  win_delete_row.rs  win_switch_table.rs
src/gtk/dialogs/: about.rs  file.rs  preferences.rs  shortcuts.rs
src/gtk/widgets/: button.rs  content.rs  drop_target.rs  menu.rs  switcher.rs
src/gtk/windows/: prelude.rs  window.rs  window_empty.rs  window_error.rs
